--- a/index.html
+++ b/index.html
@@ -5,21 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flatdango</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-    <nav>
       <h1>FlatDango Movie Theater 🎬</h1>
-      <form id="form">
-        <input
-        type="text"
-        id="search"
-        placeholder="Search"
-        class="search"
-        />
-        </form>
-        </nav>
     </header>
     <main>
       <!-- movies list section -->
