--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <h1>FlatDango Movie Theater 🎬</h1>
+      <h1 class="headers">FlatDango Movie Theater 🎬</h1>
     </header>
     <main>
       <!-- movies list section -->
